[gd_scene load_steps=9 format=4 uid="uid://cfg8ubxjp0pxx"]

[ext_resource type="Script" path="res://scenes/level/level.gd" id="1_h7i04"]
[ext_resource type="TileSet" uid="uid://4xx1tx30t6cb" path="res://assets/tile_sets/green_land_tile_set.tres" id="1_smus0"]
[ext_resource type="Script" path="res://scenes/level/tiles.gd" id="2_0ofa6"]
[ext_resource type="PackedScene" uid="uid://dgjmgs3g8oeq6" path="res://scenes/unit/enemy/spawner.tscn" id="3_3va1j"]
[ext_resource type="PackedScene" uid="uid://bljkhytt20h3f" path="res://scenes/unit/enemy/enemies/weakling.tscn" id="3_1250y"]
[ext_resource type="TileSet" uid="uid://b4ke4d7vk1ycf" path="res://assets/tile_sets/basic_water_tile_set.tres" id="3_i77tv"]
[ext_resource type="Script" path="res://scenes/level/player_stats.gd" id="5_bug8g"]
[ext_resource type="PackedScene" uid="uid://bgh0sxv8x8o2f" path="res://scenes/unit/unit_selection/unit_selection.tscn" id="6_grsqp"]

[node name="Level001" type="Node2D"]
script = ExtResource("1_h7i04")

[node name="Tiles" type="Node2D" parent="."]
script = ExtResource("2_0ofa6")

[node name="ObjectTileMapLayer" type="TileMapLayer" parent="Tiles"]

[node name="WaterTileMapLayer" type="TileMapLayer" parent="Tiles"]
tile_map_data = PackedByteArray("AAD8/wIAAgAAABIAAAD9/wAAAgAAAAwAAAD9////AgAAAAQAAAD8////AgAAAAgAAAD+////AgAAAAoAAAD9//7/AgAAAAsAAAD8//7/AgAAAAsAAAD7/wIAAgAAAAwAAAD7/wEAAgAAAAgAAAD7/wAAAgAAAAgAAAD6/wAAAgAAAAkAAAD6/wEAAgAAAAkAAAD6////AgAAAAkAAAD7////AgAAAAgAAAD+//7/AgAAABQAAAD6/wIAAgAAABEAAAD7//7/AgAAAAsAAAD6//7/AgAAABMAAAD+/wAAAgAAABoAAAD8/wEAAgAAAAoAAAD8/wAAAgAAABYAAAA=")
tile_set = ExtResource("3_i77tv")

[node name="GroundTileMapLayer" type="TileMapLayer" parent="Tiles" groups=["navigation"]]
z_index = -1
use_parent_material = true
tile_map_data = PackedByteArray("AAD/////AAABAAAAAAAAAP//AAACAAEAAAABAP//AAACAAEAAAACAP//AAABAAAAAAADAP//AAACAAEAAAAEAP//AAABAAAAAAAEAP7/AAACAAEAAAADAP7/AAACAAAAAAACAP3/AAADAAAAAAABAP3/AAAEAAEAAAAAAP3/AAAJAAAAAAD///3/AAAAAAEAAAD+//3/AAAEAAAAAAD9//3/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD7////AAACAAEAAAD8/wAAAAAAAAAAAAD9/wAAAAACAAEAAAD9/wEAAAACAAEAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAEAAAAAAAEAAAAEAAAAAAAAAAAAAAACAAEAAAABAAAAAAACAAEAAAACAAAAAAACAAEAAAACAP7/AAABAAEAAAABAP7/AAAAAAAAAAAAAP7/AAAAAAAAAAD///7/AAAAAAEAAAD+//7/AAAEAAEAAAD9//7/AAAAAAAAAAD8////AAABAAAAAAD9////AAACAAEAAAD+////AAACAAEAAAD+/wAAAAADAAAAAAD//wAAAAACAAEAAAADAAAAAAACAAEAAAAEAAAAAAABAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAEAAAD8/wEAAAACAAEAAAAEAAEAAAAEAAAAAAD7/wEAAAABAAAAAAD+/wIAAAAAAAAAAAD//wIAAAAAAAAAAAAAAAIAAAABAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAABAAEAAAAFAAEAAAACAAEAAAD6/wEAAAABAAAAAAD8/wIAAAABAAAAAAD9/wIAAAAEAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAABAAAAAAAGAAIAAAACAAEAAAD7/wIAAAAAAAAAAAD6/wIAAAAAAAAAAAD5/wIAAAAAAAAAAAADAP3/AAACAAAAAAAEAP3/AAAJAAAAAAAFAP7/AAAJAAAAAAAFAP//AAAAAAAAAAAGAAAAAAACAAEAAAAFAAAAAAACAAEAAAAGAAEAAAAAAAEAAAAHAAEAAAABAAAAAAAHAAAAAAACAAEAAAAHAP//AAAAAAAAAAAGAP//AAABAAAAAAAGAP7/AAABAAAAAAAGAP3/AAACAAEAAAAHAP3/AAACAAEAAAAFAP3/AAABAAAAAAD5//3/AAABAAAAAAD6//3/AAACAAAAAAD7//3/AAADAAAAAAD5//7/AAAJAAAAAAD4//7/AAACAAEAAAD3//7/AAACAAEAAAD3////AAADAAAAAAD4////AAACAAEAAAD5////AAABAAAAAAD4/wAAAAABAAAAAAD4/wEAAAAAAAAAAAD5/wEAAAAAAAAAAAD3/wEAAAAJAAAAAAD5/wAAAAACAAEAAAD6/wAAAAACAAEAAAAIAAIAAAAEAAAAAAAHAAIAAAACAAEAAAD7/wAAAAACAAEAAAD6////AAACAAEAAAD7//7/AAAAAAAAAAALAAIAAAABAAAAAAALAAEAAAACAAEAAAALAAAAAAABAAAAAAALAP//AAAEAAAAAAALAP7/AAAAAAAAAAALAP3/AAADAAAAAAAKAAIAAAACAAAAAAAKAAEAAAACAAEAAAAKAAAAAAACAAEAAAAKAP//AAACAAEAAAAKAP7/AAACAAEAAAAKAP3/AAAEAAAAAAAJAAIAAAADAAAAAAAJAAEAAAACAAEAAAAJAAAAAAABAAAAAAAJAP//AAACAAEAAAAJAP7/AAACAAEAAAAJAP3/AAACAAEAAAAIAAEAAAACAAEAAAAIAAAAAAACAAEAAAAIAP//AAACAAEAAAAIAP7/AAADAAAAAAAIAP3/AAACAAEAAAAHAP7/AAABAAEAAAD6//7/AAAEAAEAAAD4/wIAAAAAAAAAAAD4//3/AAABAAAAAAD3/wIAAAACAAAAAAD3/wAAAAACAAEAAAD3//3/AAAAAAEAAAD2/wIAAAADAAAAAAD2/wEAAAAFAAAAAAD2/wAAAAACAAEAAAD2////AAACAAEAAAD2//7/AAACAAEAAAD2//3/AAAAAAAAAAAVAAIAAAAEAAEAAAAVAAEAAAAFAAAAAAAVAAAAAAACAAAAAAAVAP//AAAAAAEAAAAVAP7/AAAJAAAAAAAVAP3/AAAAAAAAAAAUAAIAAAAJAAAAAAAUAAEAAAAEAAAAAAAUAAAAAAADAAAAAAAUAP//AAAJAAAAAAAUAP7/AAACAAAAAAAUAP3/AAAAAAEAAAATAAIAAAABAAAAAAATAAEAAAACAAAAAAATAAAAAAAJAAAAAAATAP//AAAJAAAAAAATAP7/AAABAAEAAAATAP3/AAAAAAAAAAASAAIAAAAEAAEAAAASAAEAAAAEAAAAAAASAAAAAAABAAEAAAASAP//AAACAAEAAAASAP7/AAAEAAAAAAASAP3/AAAEAAAAAAARAAIAAAACAAAAAAARAAEAAAAEAAEAAAARAAAAAAABAAEAAAARAP//AAACAAEAAAARAP7/AAACAAEAAAARAP3/AAADAAAAAAAQAAIAAAAFAAAAAAAQAAEAAAAEAAEAAAAQAAAAAAADAAAAAAAQAP//AAACAAEAAAAQAP7/AAACAAEAAAAQAP3/AAACAAEAAAAPAAIAAAABAAEAAAAPAAEAAAAEAAAAAAAPAAAAAAACAAEAAAAPAP//AAAJAAAAAAAPAP7/AAABAAEAAAAPAP3/AAAEAAEAAAAOAAIAAAAEAAAAAAAOAAEAAAAAAAEAAAAOAAAAAAACAAEAAAAOAP//AAACAAEAAAAOAP7/AAACAAEAAAAOAP3/AAAAAAAAAAANAAIAAAAFAAAAAAANAAEAAAABAAEAAAANAAAAAAACAAEAAAANAP//AAACAAEAAAANAP7/AAACAAEAAAANAP3/AAAFAAAAAAAMAAIAAAAEAAAAAAAMAAEAAAACAAEAAAAMAAAAAAACAAEAAAAMAP//AAACAAAAAAAMAP7/AAACAAAAAAAMAP3/AAACAAAAAAD1/wIAAAAEAAAAAAD1/wEAAAAJAAAAAAD1/wAAAAACAAEAAAD1////AAABAAEAAAD1//7/AAACAAEAAAD1//3/AAADAAAAAAD0/wIAAAAEAAAAAAD0/wEAAAAJAAAAAAD0/wAAAAACAAEAAAD0////AAADAAAAAAD0//7/AAACAAEAAAD0//3/AAABAAAAAADz/wIAAAACAAAAAADz/wEAAAABAAEAAADz/wAAAAACAAEAAADz////AAABAAEAAADz//7/AAACAAEAAADz//3/AAABAAAAAADy/wIAAAADAAAAAADy/wEAAAACAAEAAADy/wAAAAACAAEAAADy////AAAJAAAAAADy//7/AAAJAAAAAADy//3/AAACAAEAAADx/wIAAAACAAAAAADx/wEAAAACAAEAAADx/wAAAAACAAEAAADx////AAABAAAAAADx//7/AAACAAEAAADx//3/AAAEAAEAAAAZAAIAAAAAAAIAAAAZAAEAAAAAAAIAAAAZAAAAAAAAAAIAAAAZAP//AAAAAAIAAAAZAP7/AAAAAAIAAAAZAP3/AAAAAAIAAAAYAAIAAAAFAAAAAAAYAAEAAAAAAAEAAAAYAAAAAAABAAAAAAAYAP//AAAAAAAAAAAYAP7/AAABAAEAAAAYAP3/AAAAAAAAAAAXAAIAAAABAAAAAAAXAAEAAAACAAAAAAAXAAAAAAAFAAAAAAAXAP//AAAEAAEAAAAXAP7/AAAFAAAAAAAXAP3/AAAJAAAAAAAWAAIAAAABAAAAAAAWAAEAAAAEAAEAAAAWAAAAAAAAAAAAAAAWAP//AAAJAAAAAAAWAP7/AAABAAAAAAAWAP3/AAAJAAAAAADw/wIAAAAFAAAAAADw/wEAAAABAAAAAADw/wAAAAABAAAAAADw////AAAFAAAAAADw//7/AAAAAAEAAADw//3/AAAEAAAAAADv/wIAAAABAAAAAADv/wEAAAACAAEAAADv/wAAAAACAAEAAADv////AAAJAAAAAADv//7/AAACAAAAAADv//3/AAAAAAAAAADu/wIAAAACAAAAAADu/wEAAAABAAAAAADu/wAAAAACAAEAAADu////AAACAAEAAADu//7/AAAFAAAAAADu//3/AAAAAAEAAADt/wIAAAAEAAAAAADt/wEAAAACAAEAAADt/wAAAAABAAAAAADt////AAACAAAAAADt//7/AAAJAAAAAADt//3/AAAJAAAAAADs/wIAAAACAAAAAADs/wEAAAAAAAAAAADs/wAAAAACAAEAAADs////AAAEAAEAAADs//7/AAACAAEAAADs//3/AAABAAEAAADr/wIAAAAFAAAAAADr/wEAAAAAAAAAAADr/wAAAAAAAAAAAADr////AAACAAEAAADr//7/AAABAAAAAADr//3/AAACAAAAAADq/wIAAAAAAAAAAADq/wEAAAAJAAAAAADq/wAAAAAJAAAAAADq////AAACAAAAAADq//7/AAABAAEAAADq//3/AAABAAEAAADp/wIAAAAAAAAAAADp/wEAAAAAAAEAAADp/wAAAAAEAAEAAADp////AAAFAAAAAADp//7/AAAEAAEAAADp//3/AAAAAAIAAAA=")
tile_set = ExtResource("1_smus0")
collision_visibility_mode = 1
navigation_visibility_mode = 1

[node name="BackgroundTileMapLayer" type="TileMapLayer" parent="Tiles"]

[node name="EndPoint" type="Marker2D" parent="."]
position = Vector2(-364, -44)

[node name="Spawner" parent="." node_paths=PackedStringArray("end_point") instance=ExtResource("3_3va1j")]
y_sort_enabled = true
position = Vector2(75, 29)
max_spawns = 20
spawnable_packed_scene = ExtResource("3_1250y")
end_point = NodePath("../EndPoint")

[node name="Spawner2" parent="." node_paths=PackedStringArray("end_point") instance=ExtResource("3_3va1j")]
y_sort_enabled = true
position = Vector2(105, -8)
max_spawns = 20
spawnable_packed_scene = ExtResource("3_1250y")
end_point = NodePath("../EndPoint")

[node name="Spawner3" parent="." node_paths=PackedStringArray("end_point") instance=ExtResource("3_3va1j")]
y_sort_enabled = true
position = Vector2(121, -41)
max_spawns = 20
spawnable_packed_scene = ExtResource("3_1250y")
end_point = NodePath("../EndPoint")

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("5_bug8g")
life = 3

[node name="UnitSelection" parent="." instance=ExtResource("6_grsqp")]
